--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>ML</title>
+        <title>DRKIST</title>L</title>
     </head>
     <body>
-        <h1>Hello,I am sampath</h1>
+       <a href="https://forms.gle/GMA9c6JLYWLqySeT9">TECHREK QUICK</a>
     </body>
 </html>
