its quiz of drkist

--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
         <title>DRKIST</title>L</title>
     </head>
     <body>
-       <a href="https://forms.gle/GMA9c6JLYWLqySeT9">TECHREK QUICK</a>
+       <a href="https://forms.gle/GMA9c6JLYWLqySeT9">Click Here: TECHREK QUICK</a>
     </body>
 </html>
