--- a/s2/s2.html
+++ b/s2/s2.html
@@ -49,7 +49,7 @@
         }
 
         .quiz-button {
-            background: white;
+            background: red;
             color: #000;
             font-size: 20px;
             padding: 15px 30px;
