--- a/s2/s2.html
+++ b/s2/s2.html
@@ -79,7 +79,7 @@
         .copyright {
             font-size: 24px;
             font-weight: bold;
-            color: white;
+            color: black;
             margin-top: 50px;
         }
     </style>
