--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
    
     <script>
         function openQuiz() {
-            window.open("https://forms.gle/Gupys6hYTz95Hidw9
+            window.open("https://forms.gle/Gupys6hYTz95Hidw9")
         }
     </script>
 
