--- a/s2/s2.html
+++ b/s2/s2.html
@@ -17,7 +17,7 @@
             justify-content: center;
             align-items: center;
             overflow: hidden;
-            background: url('c.png') no-repeat center center/cover;
+            background: url('\c.png') no-repeat center center/cover;
             position: relative;
         }
 
@@ -77,7 +77,7 @@
         }
 
         .copyright {
-            font-size: 24px;
+            font-size: 10px;
             font-weight: bold;
             color: black;
             margin-top: 50px;
