--- a/s2/s2.html
+++ b/s2/s2.html
@@ -17,7 +17,7 @@
             justify-content: center;
             align-items: center;
             overflow: hidden;
-            background: url('\c.png') no-repeat center center/cover;
+            background: url('c2.png') no-repeat center center/cover;
             position: relative;
         }
 
