--- a/index.html
+++ b/index.html
@@ -1,96 +1,36 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DRKIST - TECHTREK 2K25</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            text-align: center;
-            color: white;
-            margin: 0;
-            padding: 0;
-            height: 100vh;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            overflow: hidden;
-            background: url('c.png') no-repeat center center/cover;
-            position: relative;
-        }
-
-        .logo {
-            position: absolute;
-            top: 20px;
-            left: 20px;
-            width: 400px;
-            height: 80px;
-        }
-        .sam {
-            position: absolute;
-            bottom: 20px;
-            width: 100%;
-            text-align: center;
-        }
-
-        h2 {
-            color: blue;
-            font-size: 60px;
-            width: 100%;
-            text-align: center;
-        }
-
-        h1 {
-            color: black;
-            font-size: 50px;
-            margin: 10px;
-        }
-
-        .quiz-button {
-            background: white;
-            color: #000;
-            font-size: 20px;
-            padding: 15px 30px;
-            border: none;
-            border-radius: 8px;
-            cursor: pointer;
-            margin-top: 20px;
-            transition: all 0.3s ease-in-out;
-        }
-
-        .quiz-butto {
-            background: yellowgreen;
-            color: #000;
-            font-size: 20px;
-            padding: 15px 30px;
-            border: none;
-            border-radius: 8px;
-            cursor: pointer;
-            margin-top: 20px;
-            transition: all 0.3s ease-in-out;
-        }
-        .quiz-button:hover {
-            background: #ff9900;
-            transform: scale(1.1);
-        }
-
-        .copyright {
-            font-size: 10px;
-            font-weight: bold;
-            color: white;
-            margin-top: 50px;
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
     <link rel="icon" type="image/x-icon" href="drk.png">
 </head>
 <body>
     <img src="d.png" alt="Logo" class="logo" />
-    
     <h2>TECHTREK 2K25</h2>
+    <h3>Quiz Competition</h3>
+    <h5>Stage 1</h5>
     <button class="quiz-button" onclick="openQuiz()">Take the Quiz</button>
    
-  
+    <script>
+        function openQuiz() {
+            window.open("https://forms.gle/5Hta7ESDDmF3c8MA7");
+        }
+    </script>
+
+    <button class="quiz-butto" onclick="openFeedback()">Feedback</button>
+   
+    <script>
+        function openFeedback() {
+            window.open("https://forms.gle/iD8DAoUHBcUfbnU17");
+        }
+    </script>
+    
+    <div class="sam">
+        <p class="copyright">&copy; 2004 By DRKIST All rights reserved.</p>
+    </div>
 </body>
 </html>
