--- a/s2/index.html
+++ b/s2/index.html
@@ -6,10 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DRKIST - TECHTREK 2K25</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" type="image/x-icon" href="./drk.png">
+    <link rel="icon" type="image/x-icon" href="images/drk.png">
 </head>
 <body>
-    <img src="./d.png" alt="Logo" class="logo" />
+    <img src="images/d.png" alt="Logo" class="logo" />
     <h2>TECHTREK 2K25</h2>
     <h3>Quiz Competition</h3>
     <h5>Stage 2</h5>
