--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DRKIST - TECHTREK 2K25</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" type="image/x-icon" href="static/images/drk.png">
+    <link rel="icon" type="image/x-icon" href="images/drk.png">
 </head>
 <body>
-    <img src="static/images/d.png" alt="Logo" class="logo" />
+    <img src="images/d.png" alt="Logo" class="logo" />
     
     <div class="container">
         <h2>TECHTREK 2K25</h2>
